refactor: updated global exception handler